2014-11-30  Oliver Kiddle  <opk@zsh.org>

	* 33820: configure.ac, Src/hist.c: detect support for realpath()
	with a NULL argument and fixes to the use of it

	* 33800: Src/Zle/zle_main.c: remove old workaround for ancient
	systems to consume typeahead before setting up the terminal

	* 33818: Src/Builtins/sched.c, Src/Zle/complist.c,
	Src/exec.c, Src/sort.c, Src/utils.c: fix types passed to sizeof
	detected by coverity as being wrong

2014-11-28  Barton E. Schaefer  <schaefer@brasslantern.com>

	* 33819: Test/A06assign.ztst: regression tests for 33816

	* 33816 (2nd part): Src/exec.c: GLOB_ASSIGN changes integer and
	floating type variables to string scalars rather than treat single
	match file names as arithmetic expressions

2014-11-28  Wayne Davison  <wayned@users.sourceforge.net>

	* unposted: avoid compiler warning about a set-but-not-used var.

2014-11-28  Wayne Davison  <wayned@users.sourceforge.net>

	* 33139: Doc/Zsh/expn.yo: add example for finding broken symlinks.

2014-11-28  Peter Stephenson  <p.stephenson@samsung.com>

	* 33815: Src/Zle/zle_word.c: fix word transposition bug where
	wrong words could be transposed.

2014-11-27  Barton E. Schaefer  <schaefer@zsh.org>

	* 33805: Doc/Zsh/params.yo: rewrite intro, tweak formatting

	* 33804: Completion/compinit: hide values of large arrays in
	typeset output by declaring with the -H attribute

2014-11-26  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Test/C01arith.ztst: test binary input using 0b.

2014-11-26  Peter Stephenson  <p.stephenson@samsung.com>

	* 33793: Src/math.c, Src/utils.c, Doc/Zsh/arith.yo: Arithmetic
	constants beginning 0b specify binary.

2014-11-25  Oliver Kiddle  <opk@zsh.org>

	* Jun T: 33769: Test/comptest: workaround for KEYTIMEOUT to
	work from test cases on Darwin and FreeBSD

	* 33770: Src/Zle/zle_main.c: avoid calling identical FIONREAD
	ioctl twice in succession

	* users/19365 (credit Death Jester and Jan Larres):
	Completion/Base/Completer/_external_pwds;